--- a/FullStackPythonSecurity/1_crypto_foundations.ipynb
+++ b/FullStackPythonSecurity/1_crypto_foundations.ipynb
@@ -510,12 +510,13 @@
     " \n",
     "RSA digital signing uses different padding scheme than RSA encryption.\n",
     " \n",
-    "## Eclyptic-curve digital signatures\n",
+    "## Elliptic-curve digital signatures\n",
     "Cryptosystem similar to RSA with following characteristics:\n",
     "- uses key-pair for signing data and verifying signatures\n",
     "- private key cannot decrypt what public key encrypted\n",
     "- faster signing data and verifying signatures than RSA\n",
     "- less lines of code to use\n",
+    "- ECC = Elliptic Curve Cryptography; ECDSA = Elliptic Curve Digital Signature Algorithm\n",
     " \n",
     " \n",
     "## Summary\n",
@@ -573,13 +574,171 @@
     "Diffie-Hellman key-exchange is one-roundtrip key-exchange algorithm that results in both nodes independently computing shared secret key for symmetric encryption.\n",
     " \n",
     " \n",
-    " \n",
     "### Server authentication\n",
-    "Public-key encryption is used for sever authentication\n",
-    " \n",
+    "Server authenticates itself to client (browser) using public-key certificate that proves public-key ownership. Public-key certificate is created and issued by Certificate Authority. Applciation for public-key certificate is called CSR - Certificate Signing Request.\n",
+    " \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Certificate in format X.509\n",
+    "import ssl\n",
+    "address = ('wikipedia.org', 443)\n",
+    "certificate = ssl.get_server_certificate(address)\n",
+    "print(certificate)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To decode above certificate use \n",
+    "\n",
+    "```\n",
+    "$ openssl.exe x509 -in server.crt -text -noout\n",
+    "Certificate:\n",
+    "    Data:\n",
+    "        Version: 3 (0x2)\n",
+    "        Serial Number:\n",
+    "            02:7d:94:1b:29:2c:db:2e:da:f9:93:11:18:53:74:3e\n",
+    "        Signature Algorithm: ecdsa-with-SHA384\n",
+    "        Issuer: C = US, O = DigiCert Inc, CN = DigiCert TLS Hybrid ECC SHA384 2020 CA1\n",
+    "        Validity\n",
+    "            Not Before: Oct 19 00:00:00 2021 GMT\n",
+    "            Not After : Nov 17 23:59:59 2022 GMT\n",
+    "        Subject: C = US, ST = California, L = San Francisco, O = \"Wikimedia Foundation, Inc.\", CN = *.wikipedia.org\n",
+    "        Subject Public Key Info:\n",
+    "            Public Key Algorithm: id-ecPublicKey\n",
+    "                Public-Key: (256 bit)\n",
+    "                pub:\n",
+    "                    04:e8:50:2c:d0:d2:4e:a2:b1:92:aa:b6:73:0f:cf:\n",
+    "                    a0:b4:57:e5:c2:c0:7c:ae:6e:55:91:4a:a6:94:67:\n",
+    "                    fa:a5:f8:b0:3f:46:ac:23:52:b4:48:3b:64:64:fb:\n",
+    "                    ea:cd:e9:e4:fb:8f:10:a7:f4:e8:23:ba:95:29:6e:\n",
+    "                    ef:ca:72:bb:83\n",
+    "                ASN1 OID: prime256v1\n",
+    "                NIST CURVE: P-256\n",
+    "        X509v3 extensions:\n",
+    "            X509v3 Authority Key Identifier:\n",
+    "                keyid:0A:BC:08:29:17:8C:A5:39:6D:7A:0E:CE:33:C7:2E:B3:ED:FB:C3:7A\n",
+    "\n",
+    "            X509v3 Subject Key Identifier:\n",
+    "                89:25:8E:F1:85:F9:7F:5C:D1:87:14:98:4A:5E:F4:1C:32:1D:51:44\n",
+    "            X509v3 Subject Alternative Name:\n",
+    "                DNS:*.wikipedia.org, DNS:wikimedia.org, DNS:mediawiki.org, DNS:wikibooks.org, DNS:wikidata.org, DNS:wikinews.org, DNS:wikiquote.org, DNS:wikisource.org, DNS:wikiversity.org, DNS:wikivoyage.org, DNS:wiktionary.org, DNS:wikimediafoundation.org, DNS:w.wiki, DNS:wmfusercontent.org, DNS:*.m.wikipedia.org, DNS:*.wikimedia.org, DNS:*.m.wikimedia.org, DNS:*.planet.wikimedia.org, DNS:*.mediawiki.org, DNS:*.m.mediawiki.org, DNS:*.wikibooks.org, DNS:*.m.wikibooks.org, DNS:*.wikidata.org, DNS:*.m.wikidata.org, DNS:*.wikinews.org, DNS:*.m.wikinews.org, DNS:*.wikiquote.org, DNS:*.m.wikiquote.org, DNS:*.wikisource.org, DNS:*.m.wikisource.org, DNS:*.wikiversity.org, DNS:*.m.wikiversity.org, DNS:*.wikivoyage.org, DNS:*.m.wikivoyage.org, DNS:*.wiktionary.org, DNS:*.m.wiktionary.org, DNS:*.wikimediafoundation.org, DNS:*.wmfusercontent.org, DNS:wikipedia.org\n",
+    "            X509v3 Key Usage: critical\n",
+    "                Digital Signature\n",
+    "            X509v3 Extended Key Usage:\n",
+    "                TLS Web Server Authentication, TLS Web Client Authentication\n",
+    "            X509v3 CRL Distribution Points:\n",
+    "\n",
+    "                Full Name:\n",
+    "                  URI:http://crl3.digicert.com/DigiCertTLSHybridECCSHA3842020CA1-1.crl\n",
+    "\n",
+    "                Full Name:\n",
+    "                  URI:http://crl4.digicert.com/DigiCertTLSHybridECCSHA3842020CA1-1.crl\n",
+    "\n",
+    "            X509v3 Certificate Policies:\n",
+    "                Policy: 2.23.140.1.2.2\n",
+    "                  CPS: http://www.digicert.com/CPS\n",
+    "\n",
+    "            Authority Information Access:\n",
+    "                OCSP - URI:http://ocsp.digicert.com\n",
+    "                CA Issuers - URI:http://cacerts.digicert.com/DigiCertTLSHybridECCSHA3842020CA1-1.crt\n",
+    "\n",
+    "            X509v3 Basic Constraints: critical\n",
+    "                CA:FALSE\n",
+    "            CT Precertificate SCTs:\n",
+    "                Signed Certificate Timestamp:\n",
+    "                    Version   : v1 (0x0)\n",
+    "                    Log ID    : 29:79:BE:F0:9E:39:39:21:F0:56:73:9F:63:A5:77:E5:\n",
+    "                                BE:57:7D:9C:60:0A:F8:F9:4D:5D:26:5C:25:5D:C7:84\n",
+    "                    Timestamp : Oct 19 16:24:26.110 2021 GMT\n",
+    "                    Extensions: none\n",
+    "                    Signature : ecdsa-with-SHA256\n",
+    "                                30:45:02:20:13:2B:9F:D4:BF:5D:66:83:C7:35:3A:0E:\n",
+    "                                8B:73:E7:EA:EA:41:D2:0F:7F:E0:25:DB:80:22:84:1C:\n",
+    "                                A4:E7:A1:FE:02:21:00:83:55:AD:D4:1D:03:23:2C:4E:\n",
+    "                                1A:6E:E6:FD:73:8F:1A:AF:90:4E:FE:1E:50:04:64:C4:\n",
+    "                                4F:DA:42:B9:21:C1:02\n",
+    "                Signed Certificate Timestamp:\n",
+    "                    Version   : v1 (0x0)\n",
+    "                    Log ID    : 51:A3:B0:F5:FD:01:79:9C:56:6D:B8:37:78:8F:0C:A4:\n",
+    "                                7A:CC:1B:27:CB:F7:9E:88:42:9A:0D:FE:D4:8B:05:E5\n",
+    "                    Timestamp : Oct 19 16:24:26.102 2021 GMT\n",
+    "                    Extensions: none\n",
+    "                    Signature : ecdsa-with-SHA256\n",
+    "                                30:45:02:21:00:EC:ED:B1:2D:A6:3E:BC:5D:AE:0F:48:\n",
+    "                                D5:70:5B:A4:E9:63:32:26:13:86:C6:D4:16:66:68:9C:\n",
+    "                                64:67:60:2E:CC:02:20:16:9D:5E:15:79:A0:EB:95:D0:\n",
+    "                                AA:50:11:40:E8:28:34:90:D8:E8:41:02:B5:A8:B0:FB:\n",
+    "                                49:EE:28:DA:16:31:FF\n",
+    "                Signed Certificate Timestamp:\n",
+    "                    Version   : v1 (0x0)\n",
+    "                    Log ID    : 41:C8:CA:B1:DF:22:46:4A:10:C6:A1:3A:09:42:87:5E:\n",
+    "                                4E:31:8B:1B:03:EB:EB:4B:C7:68:F0:90:62:96:06:F6\n",
+    "                    Timestamp : Oct 19 16:24:25.988 2021 GMT\n",
+    "                    Extensions: none\n",
+    "                    Signature : ecdsa-with-SHA256\n",
+    "                                30:45:02:21:00:FE:13:FA:3E:0B:2F:1C:AC:71:06:D1:\n",
+    "                                52:64:83:B3:B9:24:19:D6:A3:E5:22:A0:0F:13:50:04:\n",
+    "                                6C:E0:C7:6D:8E:02:20:04:E2:BC:02:FE:5C:CE:92:35:\n",
+    "                                71:EA:CE:1B:C6:B0:8A:25:E3:55:79:7F:31:FD:8D:29:\n",
+    "                                E4:94:0F:76:EA:1F:2E\n",
+    "    Signature Algorithm: ecdsa-with-SHA384\n",
+    "         30:66:02:31:00:cd:aa:e8:16:18:0b:5e:de:24:bc:44:76:f3:\n",
+    "         a3:e5:1e:a5:03:19:52:7e:fe:57:2c:0b:fe:e2:af:b4:67:3e:\n",
+    "         6a:82:08:36:ce:01:60:30:8b:5b:a3:4e:50:27:1f:de:02:02:\n",
+    "         31:00:8e:fb:20:28:7e:b5:cf:df:1f:90:99:09:83:b0:77:70:\n",
+    "         6f:e0:94:3f:9d:59:7d:ca:6c:21:69:2e:69:d2:cc:0f:e9:ac:\n",
+    "         53:c4:93:c2:9c:d6:83:96:e5:73:39:72:7d:9c\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Django\n",
-    " \n",
-    "## Gunicorn"
+    "Django runserver can't serve public-key certificate nor do TLS handshake. Use Gunicorn for that.\n",
+    "\n",
+    "\n",
+    "## Gunicorn\n",
+    "Gunicorn server serves public-key certificate to client's browser. Nginx optionally can be a reverse-proxy. To use HTTPS public-key certificate needs to be installed for Gunicorn.\n",
+    "\n",
+    "Restart Gunicorn with keyfile and certfile:\n",
+    "\n",
+    "`gunicorn app.wsgi --keyfile private_key.pem --certfile certificate.pem`\n",
+    "\n",
+    "\n",
+    "### Self-signed certificate\n",
+    "provides confidentiality without authentication. Easy and cheap to create eg. with ECC or RSA. Common name can be `localhost`.\n",
+    "\n",
+    "With this your connection will go through HTTPS but TLS handshake will fail because self-signed certificate is not trusted by your browser. You need to configure your OS to trust this certificate."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### HSTS\n",
+    "Strict-Transport-Security response header\n",
+    "\n",
+    "Following header instructs browser to only accept HTTPS traffic for the next 3600 seconds and do that also for subdomains:\n",
+    "`Strict-Transport-Security: max-age=3600; includeSubDomains`\n",
+    "\n",
+    "Can be configured with Django settings `SECURE_HSTS_SECONDS` and `SECURE_HSTS_INCLUDE_SUBDOMAINS`\n",
+    "\n",
+    "HSTS does not redirect initial client HTTP request.\n",
+    "\n",
+    "### HTTPS redirects\n",
+    "Can be configured with Django settings `SECURE_SSL_REDIRECT`\n",
+    "\n",
+    "## Requests"
    ]
   }
  ],
