--- a/test.ipynb
+++ b/test.ipynb
@@ -2,22 +2,9 @@
     "cells": [
         {
             "cell_type": "code",
-            "execution_count": 3,
+            "execution_count": null,
             "metadata": {},
-            "outputs": [
-                {
-                    "ename": "ValueError",
-                    "evalue": "temperature not possible",
-                    "output_type": "error",
-                    "traceback": [
-                        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-                        "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-                        "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_14616/3940557227.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[1;31m# print(t.to_farenheit())\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[1;31m# print(t.__dict__)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 23\u001b[1;33m \u001b[0mt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtemperature\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m-\u001b[0m\u001b[1;36m444\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-                        "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_14616/3940557227.py\u001b[0m in \u001b[0;36mset_temperature\u001b[1;34m(self, temp)\u001b[0m\n\u001b[0;32m     12\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mset_temperature\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtemp\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mtemp\u001b[0m \u001b[1;33m<\u001b[0m \u001b[1;33m-\u001b[0m\u001b[1;36m273\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 14\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'temperature not possible'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     15\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_temperature\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtemp\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-                        "\u001b[1;31mValueError\u001b[0m: temperature not possible"
-                    ]
-                }
-            ],
+            "outputs": [],
             "source": [
                 "# metodę klasy zmienić na atrybut?\n",
                 "class Celsius:\n",
@@ -46,43 +33,86 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 2,
+            "execution_count": 5,
             "metadata": {},
             "outputs": [
                 {
                     "name": "stdout",
                     "output_type": "stream",
                     "text": [
-                        "24\n"
+                        "444\n"
                     ]
                 }
             ],
             "source": [
                 "def prop(func):\n",
                 "    def wrapper(self):\n",
-                "        self._temp = func()\n",
-                "        print(self._temp)\n",
+                "        self.temp = func()\n",
+                "        print(self.temp)\n",
                 "    return wrapper\n",
                 "\n",
                 "\n",
                 "class Dupa:\n",
-                "    # def __init__(self):\n",
-                "    #     self.temp = 24\n",
-                "    def get_temp(self):\n",
+                "    def __init__(self, test):\n",
+                "        self._x = test\n",
+                "        print(self._x)\n",
+                "    \n",
+                "    \n",
+                "    def temp(self):\n",
                 "        return self.temp\n",
                 "\n",
                 "    @prop\n",
                 "    def temp2(self):\n",
                 "        return self.temp\n",
                 "\n",
-                "d = Dupa()\n",
+                "    test = 4\n",
+                "\n",
+                "\n",
+                "d = Dupa(444)\n",
                 "# d.__dict__[\"get_temp\"]= d.temp\n",
-                "print(d.temp2)\n",
+                "# d.temp2\n",
                 "\n",
                 "\n",
                 "\n",
                 "\n",
                 "\n"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 3,
+            "metadata": {},
+            "outputs": [
+                {
+                    "data": {
+                        "text/plain": [
+                            "2"
+                        ]
+                    },
+                    "execution_count": 3,
+                    "metadata": {},
+                    "output_type": "execute_result"
+                }
+            ],
+            "source": [
+                "class Pupa:\n",
+                "    def __init__(self):\n",
+                "        self._x = None\n",
+                "    \n",
+                "    def getx(self):\n",
+                "        return self._x\n",
+                "\n",
+                "    def setx(self, value):\n",
+                "        self._x = value\n",
+                "    \n",
+                "    def delx(self):\n",
+                "        del self._x\n",
+                "\n",
+                "    x = property(getx, setx, delx)\n",
+                "\n",
+                "p = Pupa()\n",
+                "p.x = 2\n",
+                "p.x"
             ]
         },
         {
