--- a/SOLID/S.ipynb
+++ b/SOLID/S.ipynb
@@ -66,6 +66,7 @@
    "source": [
     "# No Violation\n",
     "# Separated conerns of manipulating Animal properties and storing Animal properties\n",
+    "# Further fragmenting Animal class WILL NOT reduce impact of changes\n",
     "class Animal:\n",
     "    def set_name(self, name: str):\n",
     "        self.name = name\n",
