--- a/FullStackPythonSecurity/1_crypto_foundations.ipynb
+++ b/FullStackPythonSecurity/1_crypto_foundations.ipynb
@@ -471,12 +471,15 @@
     "\n",
     "\n",
     "Create private key:\n",
-    "\n",
-    "`openssl genpkey -algorithm RSA -out private_key.pem -pkeyopt rsa_keygen_bits:2048`\n",
+    "```\n",
+    "openssl genpkey -algorithm RSA -out private_key.pem -pkeyopt rsa_keygen_bits:2048\n",
+    "```\n",
     "\n",
     "Create public key:\n",
     "\n",
-    "`openssl rsa -pubout -in private_key.pem -out public_key.pem`\n",
+    "```\n",
+    "openssl rsa -pubout -in private_key.pem -out public_key.pem\n",
+    "```\n",
     "\n",
     " \n",
     "Public-key cryptography allows:\n",
@@ -703,8 +706,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Possible headers in X509 formated file\n",
+    "\n",
+    "- PEM_STRING_X509_OLD     \"X509 CERTIFICATE\"\n",
+    "- PEM_STRING_X509         \"CERTIFICATE\"\n",
+    "- PEM_STRING_X509_TRUSTED \"TRUSTED CERTIFICATE\"\n",
+    "- PEM_STRING_X509_REQ_OLD \"NEW CERTIFICATE REQUEST\"\n",
+    "- PEM_STRING_X509_REQ     \"CERTIFICATE REQUEST\"\n",
+    "- PEM_STRING_X509_CRL     \"X509 CRL\"\n",
+    "- PEM_STRING_EVP_PKEY     \"ANY PRIVATE KEY\"\n",
+    "- PEM_STRING_PUBLIC       \"PUBLIC KEY\"\n",
+    "- PEM_STRING_RSA          \"RSA PRIVATE KEY\"\n",
+    "- PEM_STRING_RSA_PUBLIC   \"RSA PUBLIC KEY\"\n",
+    "- PEM_STRING_DSA          \"DSA PRIVATE KEY\"\n",
+    "- PEM_STRING_DSA_PUBLIC   \"DSA PUBLIC KEY\"\n",
+    "- PEM_STRING_PKCS7        \"PKCS7\"\n",
+    "- PEM_STRING_PKCS7_SIGNED \"PKCS #7 SIGNED DATA\"\n",
+    "- PEM_STRING_PKCS8        \"ENCRYPTED PRIVATE KEY\"\n",
+    "- PEM_STRING_PKCS8INF     \"PRIVATE KEY\"\n",
+    "- PEM_STRING_DHPARAMS     \"DH PARAMETERS\"\n",
+    "- PEM_STRING_DHXPARAMS    \"X9.42 DH PARAMETERS\"\n",
+    "- PEM_STRING_SSL_SESSION  \"SSL SESSION PARAMETERS\"\n",
+    "- PEM_STRING_DSAPARAMS    \"DSA PARAMETERS\"\n",
+    "- PEM_STRING_ECDSA_PUBLIC \"ECDSA PUBLIC KEY\"\n",
+    "- PEM_STRING_ECPARAMETERS \"EC PARAMETERS\"\n",
+    "- PEM_STRING_ECPRIVATEKEY \"EC PRIVATE KEY\"\n",
+    "- PEM_STRING_PARAMETERS   \"PARAMETERS\"\n",
+    "- PEM_STRING_CMS          \"CMS\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Django\n",
-    "Django runserver can't serve public-key certificate nor do TLS handshake. Use Gunicorn for that.\n",
+    "Django runserver can't serve public-key certificate nor do TLS handshake. Use Gunicorn for that. WSGI generally holds certificate for Django.\n",
     "\n",
     "\n",
     "## Gunicorn\n",
@@ -712,11 +748,31 @@
     "\n",
     "Restart Gunicorn with keyfile and certfile:\n",
     "\n",
-    "`gunicorn app.wsgi --keyfile private_key.pem --certfile certificate.pem`\n",
+    "```\n",
+    "gunicorn app.wsgi --keyfile private_key.pem --certfile certificate.pem\n",
+    "```\n",
     "\n",
     "\n",
     "### Self-signed certificate\n",
-    "provides confidentiality without authentication. Easy and cheap to create eg. with ECC or RSA. Common name can be `localhost`.\n",
+    "Provides confidentiality without authentication. Easy and cheap to create eg. with ECC or RSA. Common name can be `localhost`. \n",
+    "\n",
+    "Create self-signed certificate and private key:\n",
+    "```\n",
+    "openssl ecparam -list_curves\n",
+    "openssl ecparam -name secp521r1 -genkey -param_enc explicit -out private-key.pem\n",
+    "openssl req -new -x509 -key private-key.pem -out server.pem -days 730\n",
+    "```\n",
+    "\n",
+    "Examine the keys with:\n",
+    "```\n",
+    "openssl ecparam -in private-key.pem -text -noout\n",
+    "openssl x509 -in server.pem -text -noout\n",
+    "```\n",
+    "\n",
+    "In case specific server requires chained certificate and private key you can cat them together:\n",
+    "```\n",
+    "cat private-key.pem server.pem > server-private.pem\n",
+    "```\n",
     "\n",
     "With this your connection will go through HTTPS but TLS handshake will fail because self-signed certificate is not trusted by your browser. You need to configure your OS to trust this certificate."
    ]
@@ -738,7 +794,72 @@
     "### HTTPS redirects\n",
     "Can be configured with Django settings `SECURE_SSL_REDIRECT`\n",
     "\n",
-    "## Requests"
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Requests\n",
+    "TLS is enabled by default if schema is HTTPS. To keep encryption but skip server authentication use `verify` option:\n",
+    "```\n",
+    "requests.get('https://www.python.org', verify=False)\n",
+    "```\n",
+    "To use custom CA Bundle add path to file or use environmental variable `REQUESTS_CA_BUNDLE`:\n",
+    "```\n",
+    "requests.get('https://www.python.org', verify='/path/to/ca_bundle_file')\n",
+    "```\n",
+    "- CA Bundle allows client (requests library) to authenticate server against CA listed in it.\n",
+    "- CA Bundle - root and intermediate certificates combined in correct order - intermediate first, root second, NO SERVER CERTIFICATE here\n",
+    "- CA Bundle combined with server certificate makes certificate chain (chain of trust)\n",
+    "\n",
+    "It's possible to additionally authenticate client by using `cert` tuple with server certificate and private key:\n",
+    "```\n",
+    "url = 'https://www.python.org'\n",
+    "server_cert = ('/path/to/certificate.pem', '/path/to/private_key.pem')\n",
+    "requests.get(url, cert=server_cert)\n",
+    "```\n",
+    "\n",
+    "Two-way certificate verification:\n",
+    "```\n",
+    "requests.get(url, server_cert, verify=ca_bundle_path)\n",
+    "```\n",
+    "\n",
+    "### Session\n",
+    "```\n",
+    "session = requests.Session()\n",
+    "session.verify=False\n",
+    "cert = ('/path/to/certificate.pem', '/path/to/private_key.pem')\n",
+    "session.cert = cert\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Django database\n",
+    "Usually db vendor specific options are available;\n",
+    "```\n",
+    "DATABASES = {\n",
+    "    ...\n",
+    "    \"OPTIONS\": {\n",
+    "        \"sslmode\": \"verify-full\"}\n",
+    "    }\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Django emails\n",
+    "In Django set `EMAIL_USE_SSL` to use _Implicit TLS_ for SMTP (SMTPS) that will negotiate TLS connection to be used with `django.core.mail` module. TLS clients may or may not perform server authentication. Django doesn't for emails.\n",
+    "\n",
+    "It's possible to also enable client authentication with `EMAIL_SSL_KEYFILE` and `EMAIL_SSL_CERTFILE`. \n",
+    "\n",
+    "Use `EMAIL_HOST_USER` and `EMAIL_HOST_PASSWORD` only when TLS is enabled.\n"
    ]
   }
  ],
